--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,8 +16,8 @@ phases:
       - echo Logging into Amazon ECR
       - aws --version
       #- $(aws ecr get-login --no-include-email --region us-east-2)
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 009123358043.dkr.ecr.ap-south-1.amazonaws.com
-      - REPOSITORY_URI=009123358043.dkr.ecr.ap-south-1.amazonaws.com/orderecr
+      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 872157416109.dkr.ecr.us-east-2.amazonaws.com
+      - REPOSITORY_URI=872157416109.dkr.ecr.us-east-2.amazonaws.com/orderecr
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
       - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
