--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ buyer2.uri = http://13.232.187.19:8100/api/buyer/updateRewardPoints
 spring.application.name=OrderMS
 server.port=8300
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://orderdb.cq1sywha7h8q.ap-south-1.rds.amazonaws.com:3306/orderdb?useSSL=false
+spring.datasource.url=jdbc:mysql://orderdb.cubz8u6vnfui.us-east-2.rds.amazonaws.com:3306/orderdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.hibernate.ddl-auto=update
